--- a/TicTacToeMS/TicTacToeMS.csproj
+++ b/TicTacToeMS/TicTacToeMS.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>TicTacToe_Microservice</RootNamespace>
+    <RootNamespace>TicTacToeMS</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
