--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -93,6 +93,6 @@ jobs:
     - name: Azure WebApp
       uses: Azure/webapps-deploy@v2
       with:
-        app-name: 'tictactoemsapi'
+        app-name: 'tictactoems'
         publish-profile: ${{secrets.AZURE_PUBLISHPROFILE_TICTACTOEMS}}
         images: index.docker.io/${{ secrets.DOCKERHUB_USERNAME }}/tictactoems:${{ github.sha }}
